Fixed settings layout bug on ultrawide

--- a/settings/style/settings.css
+++ b/settings/style/settings.css
@@ -68,3 +68,11 @@ body
 		width: 90vw;
 	}
 }
+
+@media (min-aspect-ratio: 16/9), (min-width: 1400px)
+{
+	.button-row
+	{
+		width: 50vw;
+	}
+}
